# projekt2.1_Glebov_B.G._M55-255

./: .gitignore  Makefile  README.md  db_meta.json  p2.cast  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  errors.py  main.py  parser.py  storage.py  utils.py
